# Nexus-Lore

./: .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LAST_UPDATED  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: daily-contribution.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: entities.py  events.py  extract.py  linter.py  misc.py  relations.py
backend/app/db/: session.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: ai_service.py
docker/: Dockerfile.frontend  docker-compose.yml
frontend/: nuxt.config.ts  package-lock.json  package.json
frontend/.output/: nitro.json
frontend/.output/public/_nuxt/: B440zZua.js  BBPJA0ZL.js  BEY006IP.js  BKlZaB3N.js  Bbjn66Tz.js  C3t5S0bJ.js  CNbGlEni.js  CmqDLmq9.js  DD_U7nIs.js  DE4yxsn4.js  DZlw62Ec.js  UGYiw06w.js  default.DVrbTVro.css  entry.DynKxoLz.css  index.CYcUelID.css  index.CnTdgX4C.css  index.DKin8nEi.css  index.DNLQrB2I.css  index.izbQM1ZN.css  pmRw1Wfc.js  settings.CKlGRagG.css
frontend/.output/server/: package.json
frontend/app/components/: AiExtractPanel.vue  EntityRelationGraph.vue  LoreCard.vue  LoreEditor.vue  TimelineTrack.vue
frontend/app/layouts/: default.vue
frontend/app/pages/: index.vue  settings.vue
frontend/app/pages/chronicle/: index.vue
frontend/app/pages/linter/: index.vue
frontend/app/plugins/: lucide.ts
frontend/assets/css/: cyberpunk.css
frontend/public/: cyberpunk.css
(+6 files in other folders)
